# odkbot

./: .gitignore  README.md  changelog.md  install_service.ps1  pyproject.toml  remove_service.ps1  run.bat  run_dev.bat
odkbot/: main.py  utils.py
vagrant/: .rsyncignore  Makefile  Vagrantfile  playbook.yml
vagrant/scripts/: RunScriptAs.ps1  install.ps1
