[tool.poetry]
name = "odkbot"
version = "0.1.0"
description = ""
authors = ["Carlo De Pieri <depieri.carlo@gmail.com>"]
license = "GPT-3"

packages = [
  { include = "odkbot" }
]

[tool.poetry.scripts]
odkbot = 'odkbot.main:run'

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
